@@ -27,7 +27,6 @@ import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -74,28 +73,31 @@ import org.sosy_lab.cpachecker.util.cwriter.ARGToCTranslator;
 @Options(prefix="cpa.arg")
 public class ARGStatistics implements Statistics {
 
-  @Option(secure=true, name="dumpAfterIteration", description="Dump all ARG related statistics files after each iteration of the CPA algorithm? (for debugging and demonstration)")
+  @Option(
+      secure = true,
+      name = "dumpAfterIteration",
+      description =
+          "Dump all ARG related statistics files after each iteration of the CPA algorithm? (for"
+              + " debugging and demonstration)")
   private boolean dumpArgInEachCpaIteration = false;
 
   @Option(secure=true, name="export", description="export final ARG as .dot file")
   private boolean exportARG = true;
 
-  @Option(secure=true, name="file",
-      description="export final ARG as .dot file")
+  @Option(secure = true, name = "file", description = "export final ARG as .dot file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path argFile = Paths.get("ARG.dot");
+  private Path argFile = Path.of("ARG.dot");
 
   @Option(
-    secure = true,
-    name = "pixelGraphicFile",
-    description =
-        "Export final ARG as pixel graphic to the given file name. The suffix is added "
-            + " corresponding"
-            + " to the value of option pixelgraphic.export.format"
-            + "If set to 'null', no pixel graphic is exported."
-  )
+      secure = true,
+      name = "pixelGraphicFile",
+      description =
+          "Export final ARG as pixel graphic to the given file name. The suffix is added "
+              + " corresponding"
+              + " to the value of option pixelgraphic.export.format"
+              + "If set to 'null', no pixel graphic is exported.")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path pixelGraphicFile = Paths.get("ARG");
+  private Path pixelGraphicFile = Path.of("ARG");
 
   @Option(secure=true, name="proofWitness",
       description="export a proof as .graphml file")
@@ -116,24 +118,31 @@ public class ARGStatistics implements Statistics {
   )
   private boolean compressWitness = true;
 
-  @Option(secure=true, name="simplifiedARG.file",
-      description="export final ARG as .dot file, showing only loop heads and function entries/exits")
+  @Option(
+      secure = true,
+      name = "simplifiedARG.file",
+      description =
+          "export final ARG as .dot file, showing only loop heads and function entries/exits")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path simplifiedArgFile = Paths.get("ARGSimplified.dot");
+  private Path simplifiedArgFile = Path.of("ARGSimplified.dot");
 
-  @Option(secure=true, name="refinements.file",
-      description="export simplified ARG that shows all refinements to .dot file")
+  @Option(
+      secure = true,
+      name = "refinements.file",
+      description = "export simplified ARG that shows all refinements to .dot file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path refinementGraphFile = Paths.get("ARGRefinements.dot");
+  private Path refinementGraphFile = Path.of("ARGRefinements.dot");
 
   @Option(secure = true, name = "translateToC",
       description = "translate final ARG into C program")
   private boolean translateARG = false;
 
-  @Option(secure = true, name = "CTranslation.file",
+  @Option(
+      secure = true,
+      name = "CTranslation.file",
       description = "translate final ARG into this C file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path argCFile = Paths.get("ARG.c");
+  private Path argCFile = Path.of("ARG.c");
 
   @Option(
       secure = true,
@@ -146,7 +155,7 @@ public class ARGStatistics implements Statistics {
       name = "automaton.exportSpcZipFile",
       description = "translate final ARG into an automaton, depends on 'automaton.export=true'")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path automatonSpcZipFile = Paths.get("ARG_parts.zip");
+  private Path automatonSpcZipFile = Path.of("ARG_parts.zip");
 
   @Option(
       secure = true,
@@ -214,12 +223,7 @@ public class ARGStatistics implements Statistics {
       exportARG = false;
     }
 
-    if (((proofWitness == null && proofWitnessDot == null) || !exportARG)
-        && counterexampleOptions.disabledCompletely()) {
-      argWitnessExporter = null;
-    } else {
-      argWitnessExporter = new WitnessExporter(config, logger, pSpecification, cfa);
-    }
+    argWitnessExporter = new WitnessExporter(config, logger, pSpecification, cfa);
 
     if (counterexampleOptions.disabledCompletely()) {
       cexExporter = null;
@@ -313,8 +317,12 @@ public class ARGStatistics implements Statistics {
     }
 
     if (translateARG) {
-      try (Writer writer = IO.openOutputFile(argCFile, Charset.defaultCharset())) {
-        writer.write(argToCExporter.translateARG((ARGState) pReached.getFirstState(), true));
+      try {
+        final String argAsC =
+            argToCExporter.translateARG((ARGState) pReached.getFirstState(), true);
+        try (Writer writer = IO.openOutputFile(argCFile, Charset.defaultCharset())) {
+          writer.write(argAsC);
+        }
       } catch (IOException | CPAException e) {
         logger.logUserException(Level.WARNING, e, "Could not write C translation of ARG to file");
       }
@@ -337,7 +345,7 @@ public class ARGStatistics implements Statistics {
     int sepIx = path.lastIndexOf(".");
     String prefix = path.substring(0, sepIx);
     String extension = path.substring(sepIx);
-    return Paths.get(prefix + "-" + partitionKey + extension);
+    return Path.of(prefix + "-" + partitionKey + extension);
   }
 
   private void exportARG(
@@ -376,29 +384,33 @@ public class ARGStatistics implements Statistics {
         Functions.forMap(relevantSuccessorRelation.asMap(), ImmutableSet.of());
 
     if (EnumSet.of(Result.TRUE, Result.UNKNOWN).contains(pResult)) {
-      final Witness witness =
-          argWitnessExporter.generateProofWitness(
-              rootState,
-              Predicates.alwaysTrue(),
-              BiPredicates.alwaysTrue(),
-              argWitnessExporter.getProofInvariantProvider());
+      try {
+        final Witness witness =
+            argWitnessExporter.generateProofWitness(
+                rootState,
+                Predicates.alwaysTrue(),
+                BiPredicates.alwaysTrue(),
+                argWitnessExporter.getProofInvariantProvider());
 
-      if (proofWitness != null) {
-        Path witnessFile = adjustPathNameForPartitioning(rootState, proofWitness);
-        WitnessToOutputFormatsUtils.writeWitness(
-            witnessFile,
-            compressWitness,
-            pAppendable -> WitnessToOutputFormatsUtils.writeToGraphMl(witness, pAppendable),
-            logger);
-      }
+        if (proofWitness != null) {
+          Path witnessFile = adjustPathNameForPartitioning(rootState, proofWitness);
+          WitnessToOutputFormatsUtils.writeWitness(
+              witnessFile,
+              compressWitness,
+              pAppendable -> WitnessToOutputFormatsUtils.writeToGraphMl(witness, pAppendable),
+              logger);
+        }
 
-      if (proofWitnessDot != null) {
-        Path witnessFile = adjustPathNameForPartitioning(rootState, proofWitnessDot);
-        WitnessToOutputFormatsUtils.writeWitness(
-            witnessFile,
-            compressWitness,
-            pAppendable -> WitnessToOutputFormatsUtils.writeToDot(witness, pAppendable),
-            logger);
+        if (proofWitnessDot != null) {
+          Path witnessFile = adjustPathNameForPartitioning(rootState, proofWitnessDot);
+          WitnessToOutputFormatsUtils.writeWitness(
+              witnessFile,
+              compressWitness,
+              pAppendable -> WitnessToOutputFormatsUtils.writeToDot(witness, pAppendable),
+              logger);
+        }
+      } catch (InterruptedException e) {
+        logger.logUserException(Level.WARNING, e, "Could not export witness due to interruption");
       }
     }
 
