@@ -13,12 +13,10 @@ import static com.google.common.base.Preconditions.checkNotNull;
 import static org.sosy_lab.cpachecker.util.CFAUtils.leavingEdges;
 
 import com.google.common.base.Joiner;
-import com.google.common.base.Optional;
 import com.google.common.collect.HashMultiset;
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
-import com.google.common.collect.Multimap;
 import com.google.common.collect.Multiset;
 import com.google.common.collect.Sets;
 import java.io.IOException;
@@ -27,10 +25,10 @@ import java.io.Writer;
 import java.math.BigInteger;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Level;
 import org.checkerframework.checker.nullness.qual.Nullable;
@@ -91,13 +89,13 @@ import org.sosy_lab.cpachecker.util.variableclassification.VariableAndFieldRelev
 @Options(prefix = "cfa.variableClassification")
 public class VariableClassificationBuilder implements StatisticsProvider {
 
-  @Option(secure=true, name = "logfile", description = "Dump variable classification to a file.")
+  @Option(secure = true, name = "logfile", description = "Dump variable classification to a file.")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path dumpfile = Paths.get("VariableClassification.log");
+  private Path dumpfile = Path.of("VariableClassification.log");
 
-  @Option(secure=true, description = "Dump variable type mapping to a file.")
+  @Option(secure = true, description = "Dump variable type mapping to a file.")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path typeMapFile = Paths.get("VariableTypeMapping.txt");
+  private Path typeMapFile = Path.of("VariableTypeMapping.txt");
 
   @Option(secure=true, description = "Dump domain type statistics to a CSV file.")
   @FileOption(FileOption.Type.OUTPUT_FILE)
@@ -124,10 +122,10 @@ public class VariableClassificationBuilder implements StatisticsProvider {
 
   private final Dependencies dependencies = new Dependencies();
 
-  private Optional<Set<String>> relevantVariables = Optional.absent();
-  private Optional<Multimap<CCompositeType, String>> relevantFields = Optional.absent();
-  private Optional<Multimap<CCompositeType, String>> addressedFields = Optional.absent();
-  private Optional<Set<String>> addressedVariables = Optional.absent();
+  private @Nullable ImmutableSet<String> relevantVariables;
+  private @Nullable ImmutableMultimap<CCompositeType, String> relevantFields;
+  private @Nullable ImmutableMultimap<CCompositeType, String> addressedFields;
+  private @Nullable ImmutableSet<String> addressedVariables;
 
   private final LogManager logger;
   private final VariableClassificationStatistics stats = new VariableClassificationStatistics();
@@ -174,7 +172,8 @@ public class VariableClassificationBuilder implements StatisticsProvider {
    * creating all maps, collecting vars, solving dependencies.
    * The function runs only once, after that it does nothing. */
   public VariableClassification build(CFA cfa) throws UnrecognizedCodeException {
-    checkArgument(cfa.getLanguage() == Language.C, "VariableClassification currently only supports C");
+    checkArgument(
+        cfa.getLanguage() == Language.C, "VariableClassification currently only supports C");
 
     stats.variableClassificationTimer.start();
     // fill maps
@@ -231,7 +230,8 @@ public class VariableClassificationBuilder implements StatisticsProvider {
       dependencies.addVar(var);
     }
 
-    boolean hasRelevantNonIntAddVars = !Sets.intersection(relevantVariables.get(), nonIntAddVars).isEmpty();
+    boolean hasRelevantNonIntAddVars =
+        !Sets.intersection(relevantVariables, nonIntAddVars).isEmpty();
 
     stats.buildTimer.start();
     VariableClassification result =
@@ -241,18 +241,17 @@ public class VariableClassificationBuilder implements StatisticsProvider {
             intEqualVars,
             intAddVars,
             intOverflowVars,
-            relevantVariables.get(),
-            addressedVariables.get(),
-            relevantFields.get(),
-            addressedFields.get(),
+            relevantVariables,
+            addressedVariables,
+            relevantFields,
+            addressedFields,
             dependencies.partitions,
             intBoolPartitions,
             intEqualPartitions,
             intAddPartitions,
             dependencies.edgeToPartition,
             extractAssumedVariables(cfa.getAllNodes()),
-            extractAssignedVariables(cfa.getAllNodes()),
-            logger);
+            extractAssignedVariables(cfa.getAllNodes()));
     stats.buildTimer.stop();
 
     stats.exportTimer.start();
@@ -275,12 +274,13 @@ public class VariableClassificationBuilder implements StatisticsProvider {
         w.append("\n\nDEPENDENCIES\n\n");
         w.append(dependencies.toString());
         w.append("\n\nRELEVANT VARS\n\n");
-        w.append(relevantVariables.get().toString());
+        w.append(relevantVariables.toString());
         w.append("\n\nRELEVANT FIELDS\n\n");
-        w.append(relevantFields.get().toString());
+        w.append(relevantFields.toString());
         w.append("\n");
       } catch (IOException e) {
-        logger.logUserException(Level.WARNING, e, "Could not write variable classification to file");
+        logger.logUserException(
+            Level.WARNING, e, "Could not write variable classification to file");
       }
     }
 
@@ -326,7 +326,8 @@ public class VariableClassificationBuilder implements StatisticsProvider {
       }
       w.write("\n");
     } catch (IOException e) {
-      logger.logUserException(Level.WARNING, e, "Could not write variable classification statistics to file");
+      logger.logUserException(
+          Level.WARNING, e, "Could not write variable classification statistics to file");
     }
   }
 
@@ -369,28 +370,31 @@ public class VariableClassificationBuilder implements StatisticsProvider {
 
     final String prefix = "\nVC ";
     StringBuilder str = new StringBuilder("VariableClassification Statistics\n");
-    Joiner.on(prefix).appendTo(str, new String[] {
-        "---------------------------------",
-        "number of boolean vars:  " + numOfBooleans,
-        "number of intEq vars:    " + numOfIntEquals,
-        "number of intAdd vars:   " + numOfIntAdds,
-        "number of all vars:      " + allVars.size(),
-        "number of rel. vars:     " + relevantVariables.get().size(),
-        "number of addr. vars:    " + addressedVariables.get().size(),
-        "number of rel. fields:   " + relevantFields.get().size(),
-        "number of addr. fields:  " + addressedFields.get().size(),
-        "number of intBool partitions:  " + vc.getIntBoolPartitions().size(),
-        "number of intEq partitions:    " + vc.getIntEqualPartitions().size(),
-        "number of intAdd partitions:   " + vc.getIntAddPartitions().size(),
-        "number of all partitions:      " + dependencies.partitions.size(),
-        });
+    Joiner.on(prefix)
+        .appendTo(
+            str,
+            new String[] {
+              "---------------------------------",
+              "number of boolean vars:  " + numOfBooleans,
+              "number of intEq vars:    " + numOfIntEquals,
+              "number of intAdd vars:   " + numOfIntAdds,
+              "number of all vars:      " + allVars.size(),
+              "number of rel. vars:     " + relevantVariables.size(),
+              "number of addr. vars:    " + addressedVariables.size(),
+              "number of rel. fields:   " + relevantFields.size(),
+              "number of addr. fields:  " + addressedFields.size(),
+              "number of intBool partitions:  " + vc.getIntBoolPartitions().size(),
+              "number of intEq partitions:    " + vc.getIntEqualPartitions().size(),
+              "number of intAdd partitions:   " + vc.getIntAddPartitions().size(),
+              "number of all partitions:      " + dependencies.partitions.size(),
+            });
     str.append("\n---------------------------------\n");
 
     logger.log(Level.INFO, str.toString());
   }
 
   private int countNumberOfRelevantVars(Set<String> ofVars) {
-    return Sets.intersection(ofVars, relevantVariables.get()).size();
+    return Sets.intersection(ofVars, relevantVariables).size();
   }
 
   /** This function iterates over all edges of the cfa, collects all variables
@@ -406,12 +410,12 @@ public class VariableClassificationBuilder implements StatisticsProvider {
                 VariableAndFieldRelevancyComputer.handleEdge(cfa, edge));
       }
     }
-    addressedVariables = Optional.of(varFieldDependencies.computeAddressedVariables());
-    addressedFields = Optional.of(varFieldDependencies.computeAddressedFields());
+    addressedVariables = varFieldDependencies.computeAddressedVariables();
+    addressedFields = varFieldDependencies.computeAddressedFields();
     final Pair<ImmutableSet<String>, ImmutableMultimap<CCompositeType, String>> relevant =
                                                               varFieldDependencies.computeRelevantVariablesAndFields();
-    relevantVariables = Optional.of(relevant.getFirst());
-    relevantFields = Optional.of(relevant.getSecond());
+    relevantVariables = relevant.getFirst();
+    relevantFields = relevant.getSecond();
   }
 
   /**
@@ -511,7 +515,7 @@ public class VariableClassificationBuilder implements StatisticsProvider {
     case FunctionReturnEdge: {
       Optional<CVariableDeclaration> returnVar = ((CFunctionReturnEdge)edge).getFunctionEntry().getReturnVariable();
       if (returnVar.isPresent()) {
-        String scopedVarName = returnVar.get().getQualifiedName();
+            String scopedVarName = returnVar.orElseThrow().getQualifiedName();
         dependencies.addVar(scopedVarName);
         Partition partition = dependencies.getPartitionForVar(scopedVarName);
         partition.addEdge(edge, 0);
@@ -524,7 +528,7 @@ public class VariableClassificationBuilder implements StatisticsProvider {
       // adding a new temporary FUNCTION_RETURN_VARIABLE, that is not global (-> false)
       CReturnStatementEdge returnStatement = (CReturnStatementEdge) edge;
       if (returnStatement.asAssignment().isPresent()) {
-        handleAssignment(edge, returnStatement.asAssignment().get(), cfa);
+            handleAssignment(edge, returnStatement.asAssignment().orElseThrow(), cfa);
       }
       break;
     }
@@ -563,7 +567,9 @@ public class VariableClassificationBuilder implements StatisticsProvider {
 
     final CInitializer initializer = vdecl.getInitializer();
 
-    if ((initializer == null) || !(initializer instanceof CInitializerExpression)) { return; }
+    if (!(initializer instanceof CInitializerExpression)) {
+      return;
+    }
 
     CExpression exp = ((CInitializerExpression) initializer).getExpression();
     if (exp == null) { return; }
@@ -704,7 +710,7 @@ public class VariableClassificationBuilder implements StatisticsProvider {
     CFunctionCall statement = func.getExpression();
     Optional<CVariableDeclaration> returnVar = edge.getSuccessor().getReturnVariable();
     if (returnVar.isPresent()) {
-      String scopedRetVal = returnVar.get().getQualifiedName();
+      String scopedRetVal = returnVar.orElseThrow().getQualifiedName();
       if (statement instanceof CFunctionCallAssignmentStatement) {
         // a=f();
         CFunctionCallAssignmentStatement call = (CFunctionCallAssignmentStatement) statement;
